--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "nanoid": "^5.0.8",
     "next": "^15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "nanoid": "^5.0.8"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.10.6",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.2",
-    "typescript": "^5.7.3",
-    "tailwindcss": "^4.0.0",
-    "postcss": "^8.5.2",
-    "autoprefixer": "^10.4.20"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.7.3"
   }
 }
