--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nanoid": "^5.0.8",
     "next": "^15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "resend": "^6.2.2"
   },
   "devDependencies": {
     "@types/node": "^22.10.6",
