openai and first gen audio working

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,25 @@
-# Base URL for the application
+# OpenAI API Key (for lyrics generation via Flask service)
+OPENAI_API_KEY=sk-...
+
+# Replicate API Token (for music, voice, and video generation)
+REPLICATE_API_TOKEN=r8_...
+
+# Application URL
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-# Video generation service (Flask API from teammate)
+# Flask service URL (for lyrics generation)
 VIDEO_SERVICE_URL=http://localhost:5000
 
 # Gmail credentials (for sending emails)
 GMAIL_USER=your.email@gmail.com
 GMAIL_APP_PASSWORD=your_16_character_app_password
+
+# Optional: Custom avatar image URL
+# If not set, will use /avatar.jpg from public folder
+# DEFAULT_AVATAR_URL=https://your-cdn.com/avatar.jpg
+
+# Optional: Processing timeouts (in milliseconds)
+# TIMEOUT_LYRICS=30000
+# TIMEOUT_MUSIC=300000
+# TIMEOUT_VOICE=180000
+# TIMEOUT_VIDEO=600000
