--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "nanoid": "^5.0.8",
     "next": "^15.1.4",
     "nodemailer": "^7.0.10",
+    "openai": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "replicate": "^1.3.1",
     "resend": "^6.2.2"
   },
   "devDependencies": {
