Switch to Gmail SMTP for better email deliverability (avoids spam)

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 # Video generation service (Flask API from teammate)
 VIDEO_SERVICE_URL=http://localhost:5000
 
-# Email service (Resend)
-RESEND_API_KEY=re_your_api_key_here
+# Gmail credentials (for sending emails)
+GMAIL_USER=your.email@gmail.com
+GMAIL_APP_PASSWORD=your_16_character_app_password
